--- a/neural_network/neural_101.ipynb
+++ b/neural_network/neural_101.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7e5f030d",
+   "metadata": {},
+   "source": [
+    "Learn from \n",
+    "[Learn to build a neural network from scratch (Medium article)](https://medium.com/@waadlingaadil/learn-to-build-a-neural-network-from-scratch-yes-really-cac4ca457efc)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b0792f80",
